# md-models-macro

./: .gitignore  Cargo.toml  README.md
.github/workflows/: lint.yml  publish.yml  test.yml
src/: lib.rs
tests/: test_macro.rs
tests/data/: model.md
