[package]
name = "mdmodels-macro"
description = "A procedural macro for generating models from a markdown data model"
version = "0.1.2"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "^2.0"
quote = "^1.0"
proc-macro2 = "^1.0"
serde = { version = "1.0.203", features = ["derive"] }
lazy_static = "1.4.0"
convert_case = "0.6.0"
schemars = "0.8.21"
mdmodels = "^0.1.8"

[dev-dependencies]
derive_builder = "0.20.0"
serde_json = "1.0.119"
trybuild = "1.0.96"
